[fix] p welcome tag alignment

--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,7 @@ html {
   font-family: "Rubik", sans-serif;
   font-size: calc(0.75em + 1vmin);
   color: white;
+  text-align: left;
 }
 
 .text {
